--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -31,6 +31,7 @@
   --background-color: #ffe5e5;
   --primary-color: #d2367a;
   --secondary-color: #36206d;
+  --color-white: white;
 
   --small-font-size: clamp(0.8rem, 1.2vw, 1rem);
   --medium-font-size: clamp(1rem, 1.5vw, 1.2rem);
@@ -68,6 +69,11 @@ html {
   font-size: var(--medium-font-size);
   font-weight: 700;
   cursor: pointer;
+  opacity: 1;
+  transition: opacity 0.2s ease-out;
+  @starting-style {
+    opacity: 0;
+  }
 }
 main {
   padding-block-start: 120px;
@@ -78,13 +84,16 @@ main {
 /* NAVBAR */
 
 .navbar {
+  background-color: var(--background-color);
+  z-index: 100;
   display: flex;
   justify-content: space-between;
   position: fixed;
   height: 100px;
   width: 100vw;
   padding-inline: 10vw;
-  /* box-shadow: 0 0 5px rgba(0, 0, 10, 0.1); */
+  padding-block: 10px;
+  box-shadow: 0 0 5px rgba(0, 0, 10, 0.1);
 }
 .navbar img {
   height: 100%;
@@ -109,9 +118,26 @@ nav {
 /* DECKS */
 /* DECKS */
 
+.deck-card {
+  /* border: solid var(--secondary-color) 5px; */
+  background-color: var(--color-white);
+  padding: 10px 20px;
+  border-radius: 15px;
+  margin-block: 10px;
+  box-shadow: inset 0 0 5px #d2367a60;
+}
+.deck-card .deck,
+.deck-card form {
+  background-color: var(--background-color);
+}
+.deck-card input {
+  background-color: var(--color-white);
+
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
+}
 .deck {
   position: relative;
-  background-color: white;
+  background-color: var(--color-white);
   margin-block: 20px;
   padding: 20px 30px;
   border-radius: 10px;
@@ -156,7 +182,7 @@ nav {
   border-radius: 15px;
   width: 60px;
   position: relative;
-  border: solid white 2px;
+  border: solid var(--color-white) 2px;
 }
 .nb-carte::after {
   position: absolute;
@@ -169,7 +195,7 @@ nav {
   border-radius: 15px;
   background-color: var(--secondary-color);
   z-index: -1;
-  border: solid white 2px;
+  border: solid var(--color-white) 2px;
 }
 .nb-carte::before {
   position: absolute;
@@ -182,7 +208,7 @@ nav {
   border-radius: 15px;
   background-color: var(--secondary-color);
   z-index: -1;
-  border: solid white 2px;
+  border: solid var(--color-white) 2px;
 }
 .nb-carte p {
   font-weight: 700;
@@ -193,7 +219,7 @@ nav {
 /* FORMS */
 
 form {
-  background-color: white;
+  background-color: var(--color-white);
   border-radius: 15px;
   padding: 20px 5vw;
   max-width: 700px;
@@ -213,11 +239,16 @@ form input {
   border-radius: 5px;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
   outline: solid #d2367a00 2px;
-  transition: outline 0.2s ease-out;
+  transition: outline 0.2s ease-out, box-shadow 0.2s ease-out,
+    color 0.2s ease-out;
 }
 form input[type="number"] {
   width: 60px;
   padding-inline: 5px;
+}
+form input:disabled {
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0);
+  cursor: text;
 }
 form input:focus-visible {
   outline: solid var(--primary-color) 2px;
