--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -165,12 +165,13 @@ nav {
   /* color: var(--secondary-color); */
   font-weight: 700;
 }
-.stats {
-  position: absolute;
+.deck-content {
   display: flex;
   justify-content: space-between;
-  right: 10px;
-  top: 10px;
+}
+.deck-stats {
+  display: flex;
+  justify-content: space-between;
 }
 .nb-likes {
   font-size: var(--big-font-size);
@@ -195,9 +196,10 @@ nav {
   content: "";
   width: 100%;
   height: 100%;
-  top: 8px;
-  left: 50%; /* Positionne le milieu à 50% */
-  transform: translateX(-40%); /* Centre l'élément */
+  top: 3px;
+  left: 3px;
+  right: 0;
+  bottom: 0;
   border-radius: 15px;
   background-color: var(--secondary-color);
   z-index: -1;
@@ -208,12 +210,13 @@ nav {
   content: "";
   width: 100%;
   height: 100%;
-  top: 16px;
-  left: 50%; /* Positionne le milieu à 50% */
-  transform: translateX(-30%); /* Centre l'élément */
+  top: 8px;
+  left: 8px;
+  right: 0;
+  bottom: 0;
   border-radius: 15px;
   background-color: var(--secondary-color);
-  z-index: -1;
+  z-index: -2;
   border: solid var(--color-white) 2px;
 }
 .nb-carte p {
