--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -72,7 +72,8 @@ html {
   background-color: unset;
   border: none;
   color: var(--secondary-color);
-  font-size: var(--medium-font-size);
+
+  font-size: var(--small-font-size);
   font-weight: 700;
   cursor: pointer;
   opacity: 1;
@@ -80,6 +81,9 @@ html {
   @starting-style {
     opacity: 0;
   }
+}
+.nav-link {
+  font-size: var(--medium-font-size);
 }
 main {
   padding-block-start: 120px;
@@ -136,9 +140,9 @@ nav {
 .deck-card form {
   background-color: var(--background-color);
 }
-.deck-card input {
+.deck-card input,
+.deck-card textarea {
   background-color: var(--color-white);
-
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
 }
 .deck {
@@ -172,6 +176,9 @@ nav {
 .deck-stats {
   display: flex;
   justify-content: space-between;
+}
+.date {
+  font-size: var(--small-font-size);
 }
 .nb-likes {
   font-size: var(--big-font-size);
@@ -227,10 +234,21 @@ nav {
 /* CARTE */
 /* CARTE */
 
-.carte {
-  margin-bottom: 5px;
-  width: 90%;
+.card-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.deck-card .deck .button-container {
+  display: none;
+}
+
+.carte form {
+  margin-block: 5px;
+  width: 20vw;
+  min-width: 200px;
   margin-inline: auto;
+  padding: 10px 20px;
 }
 
 /* FORM  */
@@ -249,7 +267,8 @@ form {
 .input-group {
   margin-block: 20px;
 }
-form input {
+form input,
+form textarea {
   border: none;
   margin-block-start: 5px;
   padding: 10px 20px;
@@ -341,9 +360,10 @@ form > p:last-of-type,
 /* MEDIA QUERIES */
 /* MEDIA QUERIES */
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 800px) {
   .deck {
     width: 100%;
+    padding: 15px 25px;
   }
 }
 
@@ -357,5 +377,8 @@ form > p:last-of-type,
   }
   nav {
     display: none;
+  }
+  .deck {
+    padding: 5px 10px;
   }
 }
