--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -62,6 +62,7 @@ html {
 }
 .add-button {
   margin-inline: auto;
+  text-align: center;
 }
 .delete-button.link {
   color: red;
@@ -128,11 +129,10 @@ nav {
 /* DECKS */
 /* DECKS */
 
-.deck-card {
-  /* border: solid var(--secondary-color) 5px; */
+/* .deck-card {
+  border-radius: 15px;
   background-color: var(--color-white);
   padding: 10px 20px;
-  border-radius: 15px;
   margin-block: 10px;
   box-shadow: inset 0 0 5px #d2367a60;
 }
@@ -144,7 +144,9 @@ nav {
 .deck-card textarea {
   background-color: var(--color-white);
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
-}
+  max-width: 100%;
+} */
+
 .deck {
   position: relative;
   background-color: var(--color-white);
@@ -242,9 +244,9 @@ nav {
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
-.deck-card .deck .button-container {
+/* .deck-card .deck .button-container {
   display: none;
-}
+} */
 
 .carte form {
   margin-block: 5px;
