--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -19,6 +19,7 @@
   font-family: "Lilita One", serif;
   font-weight: 400;
   font-style: normal;
+  font-size: var(--title-font-size);
   color: var(--secondary-color);
 }
 .goofy {
@@ -206,6 +207,7 @@ nav {
   color: white;
   padding: 20px 5px;
   aspect-ratio: 5/7;
+  max-width: 50px;
   height: 80%;
   border-radius: 15px;
   position: relative;
@@ -260,7 +262,7 @@ nav {
 .carte form {
   margin-block: 5px;
   width: 20vw;
-  min-width: 200px;
+  min-width: 250px;
   margin-inline: auto;
   padding: 10px 20px;
 }
@@ -268,6 +270,7 @@ nav {
 .verif {
   position: fixed;
   width: 40vw;
+  min-width: 280px;
   margin: 0;
   border: solid var(--primary-color) 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
@@ -318,9 +321,11 @@ form input,
 form textarea {
   border: none;
   margin-block-start: 5px;
+  font-size: var(--small-font-size);
   padding: 10px 20px;
   background-color: var(--background-color);
   width: 100%;
+  max-width: 100%;
   border-radius: 5px;
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
   outline: solid #d2367a00 2px;
@@ -340,6 +345,7 @@ form input:focus-visible {
 }
 form label {
   margin-bottom: 5px;
+  font-size: var(--small-font-size);
 }
 form h1 {
   font-weight: 800;
@@ -442,5 +448,13 @@ form > p:last-of-type,
   }
   .deck {
     padding: 5px 10px;
+  }
+  .form-input,
+  .input-group {
+    margin-block: 10px;
+  }
+  form input,
+  form textarea {
+    padding: 8px 5px;
   }
 }
