--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -304,6 +304,27 @@ nav {
   font-size: var(--small-font-size);
   padding: 5px 10px;
 }
+/* Style de la div qui apparaît en bas de l'écran */
+.status-feedback {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: var(--secondary-color);
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s, visibility 0.5s;
+  z-index: 1000;
+}
+
+.status-feedback {
+  opacity: 1;
+  visibility: visible;
+}
 
 /* CARTE */
 /* CARTE */
